--- a/운영체제 - OS/0. 운영체제 첫머리.md
+++ b/운영체제 - OS/0. 운영체제 첫머리.md
@@ -3,7 +3,7 @@
 > 프로그램이 실행될 때, 프로세서(Processor)는 명령어 메모리에서 명령어를 fetch하고, decode하고, execute한다. 해당 명령어의 작업이 완료되면 프로세서는 다음 명령어로 프로그램이 완전히 종료될 때 까지 이 과정을 반복한다.
 듣기에는 간단해 보이는 이런 과정을 위해 우리에게 보이지 않는 부분에서 정말 많은 일이 일어나고 있다.
 
-프로그램 사용을 쉽게 만들기 위해 프로그램들이 메모리를 공유하는 것을 허용하고, 다른 기기와 상호작용할 수 있게 만드는 등의 작업을 수행하는 소프트웨어를 **운영체제(OS; Operating System)**라고 한다.
+프로그램 사용을 쉽게 만들기 위해 프로그램들이 메모리를 공유하는 것을 허용하고, 다른 기기와 상호작용할 수 있게 만드는 등의 작업을 수행하는 소프트웨어를 **운영체제(OS; Operating System)** 라고 한다.
 
 ### 가상화 (Virtualization)
 
@@ -14,7 +14,7 @@
 
 
 **CPU 가상화**
-프로그램들을 여러 개 실행시키면 프로세서가 하나 밖에 없음애도 프로그램 여러 개가 동시에 실행되는 것 처럼 보인다. 이는 운영체제의 CPU 가상화(cpu virtualization)에 의한 것으로 운영체제는 하드웨어의 도움을 받아 시스템에 수많은 CPU가 존재하는 듯한 **환상(illusion)**을 만들어낸다.
+프로그램들을 여러 개 실행시키면 프로세서가 하나 밖에 없음애도 프로그램 여러 개가 동시에 실행되는 것 처럼 보인다. 이는 운영체제의 CPU 가상화(cpu virtualization)에 의한 것으로 운영체제는 하드웨어의 도움을 받아 시스템에 수많은 CPU가 존재하는 듯한 **환상(illusion)** 을 만들어낸다.
 
 **Memory 가상화**
 물리 메모리 모델은 단순한 바이트 배열이다. 메모리를 읽고 쓰기 위해서는 주소(address)를 명시해야 한다. 프로그램들이 실행되는 동안 메모리는 항상 접근되는데 이 때 각자 자신의 독립적인 메모리 공간을 가지고 있는 것 처럼 보인다.
@@ -25,7 +25,7 @@
 
 시스템이 자원 공유 및 상호작용 관리를 통해 여러 작업을 수행할 수 있는 능력이다.
 운영체제는 한 번에 여러 가지 프로세스를 저글링하여 하나의 프로세스를 실행하고, 그 다음 다른 프로세스를 실행한다.
-이 과정에서 발생하는 문제들을 **병행성 문제(the problems of concurrency)**라고 한다.
+이 과정에서 발생하는 문제들을 **병행성 문제(the problems of concurrency)** 라고 한다.
 
 ### 영속성 (Persistence)
 
@@ -52,12 +52,12 @@ CPU나 메모리와 달리 디스크는 프로그램 별로 가상 디스크를 
 > **2. 성능(performance)**
 
 운영체제의 설계와 구현에 중요한 목표는 성능.
-즉, **오버헤드를 최소화(minimize the overheads)**하는 것이다.
+즉, **오버헤드를 최소화(minimize the overheads)** 하는 것이다.
 가상화와 사용하기 쉬운 시스템을 만드는 것은 의미가 있지만, 어떤 비용을 치뤄서라도 해내야하는 것은 아니다. 가상화 및 다른 운영체제의 기능들은 과도한 오버헤드 없이 제공되어야 한다.
 
 > **3. 보호(protection)**
 
-또 다른 목표는 응용 프로그램과 응용 프로그램 간, 그리고 운영체제와 응용 프로그램 간의 보호다. 다수의 프로그램들이 동시에 실행되기 때문에, 운영체제는 한 프로그램의 악의적인 또는 의도치 않은 행위가 다른 프로그램에게 피해를 주지 않을 것을 보장해야 한다. 또한 응용 프로그램이 운영체제에 해를 끼치는 것도 방지해야 한다. 보호는 운영체제의 원칙 중 하나인 **고립(isolation)**의 핵심이다. 프로세스를 다른 프로세스로부터 고립시키는 일은 보호의 핵심이고 운영체제가 수행 해야 할 일 중 많은 부분의 근간이 된다.
+또 다른 목표는 응용 프로그램과 응용 프로그램 간, 그리고 운영체제와 응용 프로그램 간의 보호다. 다수의 프로그램들이 동시에 실행되기 때문에, 운영체제는 한 프로그램의 악의적인 또는 의도치 않은 행위가 다른 프로그램에게 피해를 주지 않을 것을 보장해야 한다. 또한 응용 프로그램이 운영체제에 해를 끼치는 것도 방지해야 한다. 보호는 운영체제의 원칙 중 하나인 **고립(isolation)** 의 핵심이다. 프로세스를 다른 프로세스로부터 고립시키는 일은 보호의 핵심이고 운영체제가 수행 해야 할 일 중 많은 부분의 근간이 된다.
 
 > **4. 신뢰성(reliability)**
 
@@ -77,4 +77,4 @@ CPU나 메모리와 달리 디스크는 프로그램 별로 가상 디스크를 
 
 ---
 <span style="color:gray"><참고자료>
-Remzi Arpaci-Dusseau and Andrea C. Arpaci-Dusseau, Operating System: Three Easy Pieces </span>
+Remzi Arpaci-Dusseau and Andrea C. Arpaci-Dusseau, Operating System: Three Easy Pieces, Arpaci-Dusseau Books </span>
